Parte 3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     def_declr -> declaration def_declr
Rule 2     def_declr -> definition def_declr
Rule 3     def_declr -> declaration
Rule 4     def_declr -> definition
Rule 5     program -> def_declr
Rule 6     empty -> <empty>
Rule 7     declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type
Rule 8     declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type
Rule 9     definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block
Rule 10    definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block
Rule 11    varg -> <empty>
Rule 12    arg -> VARIABLE COLON type
Rule 13    arg -> VARIABLE COLON type COMMA arg
Rule 14    block -> LBRACKET block_content RBRACKET
Rule 15    block -> LBRACKET empty RBRACKET
Rule 16    block_content -> statement block_content
Rule 17    block_content -> statement
Rule 18    statement -> return
Rule 19    statement -> stat_expression
Rule 20    statement -> if
Rule 21    statement -> if_else
Rule 22    statement -> while
Rule 23    statement -> var_decl
Rule 24    statement -> var_ass
Rule 25    statement -> array_decl
Rule 26    statement -> array_ass
Rule 27    statement -> print
Rule 28    print_helper -> COMMA expression
Rule 29    print_helper -> COMMA expression print_helper
Rule 30    print -> PRINT LPAREN STRING print_helper RPAREN SEMICOLONS
Rule 31    print -> PRINT LPAREN STRING empty RPAREN SEMICOLONS
Rule 32    return -> RETURN SEMICOLONS
Rule 33    return -> RETURN expression SEMICOLONS
Rule 34    stat_expression -> expression SEMICOLONS
Rule 35    if -> IF expression block
Rule 36    if_else -> IF expression block ELSE block
Rule 37    while -> WHILE expression block
Rule 38    var_decl -> VARIABLE COLON type EQUALS expression SEMICOLONS
Rule 39    array_decl -> VARIABLE COLON LRPAREN type RRPAREN SEMICOLONS
Rule 40    array_ass -> VARIABLE LRPAREN expression RRPAREN EQUALS expression SEMICOLONS
Rule 41    type -> INT_TYPE
Rule 42    type -> FLOAT_TYPE
Rule 43    type -> STRING_TYPE
Rule 44    type -> BOOL_TYPE
Rule 45    type -> VOID_TYPE
Rule 46    var_ass -> VARIABLE EQUALS expression SEMICOLONS
Rule 47    expression -> expression PLUS expression
Rule 48    expression -> expression MINUS expression
Rule 49    expression -> expression TIMES expression
Rule 50    expression -> expression DIVIDE expression
Rule 51    expression -> expression COMP expression
Rule 52    expression -> expression AND expression
Rule 53    expression -> expression OR expression
Rule 54    expression -> expression NOT_EQUALS expression
Rule 55    expression -> expression GREATER_OR_EQUAL expression
Rule 56    expression -> expression LESS_OR_EQUALS expression
Rule 57    expression -> expression GREATER expression
Rule 58    expression -> expression LESS expression
Rule 59    expression -> expression MODULO expression
Rule 60    expression -> MINUS expression
Rule 61    expression -> LPAREN expression RPAREN
Rule 62    expression -> INT
Rule 63    expression -> FLOAT
Rule 64    expression -> STRING
Rule 65    expression -> TRUE
Rule 66    expression -> FALSE
Rule 67    expression -> VARIABLE
Rule 68    expression -> NOT expression
Rule 69    expression -> VARIABLE LRPAREN expression RRPAREN
Rule 70    expression -> GET_ARRAY LRPAREN expression RRPAREN
Rule 71    expression -> VARIABLE LPAREN argument_f RPAREN
Rule 72    argf -> <empty>
Rule 73    arg_f -> expression
Rule 74    arg_f -> expression COMMA arg_f
Rule 75    argument_f -> arg_f
Rule 76    argument_f -> argf

Terminals, with rules where they appear

AND                  : 52
BOOL_TYPE            : 44
COLON                : 7 8 9 10 12 13 38 39
COMMA                : 13 28 29 74
COMP                 : 51
DECL                 : 7 8
DEF                  : 9 10
DIVIDE               : 50
ELSE                 : 36
EQUALS               : 38 40 46
FALSE                : 66
FLOAT                : 63
FLOAT_TYPE           : 42
GET_ARRAY            : 70
GREATER              : 57
GREATER_OR_EQUAL     : 55
IF                   : 35 36
INT                  : 62
INT_TYPE             : 41
LBRACKET             : 14 15
LESS                 : 58
LESS_OR_EQUALS       : 56
LPAREN               : 7 8 9 10 30 31 61 71
LRPAREN              : 39 40 69 70
MINUS                : 48 60
MODULO               : 59
NOT                  : 68
NOT_EQUALS           : 54
OR                   : 53
PLUS                 : 47
PRINT                : 30 31
RBRACKET             : 14 15
RETURN               : 32 33
RPAREN               : 7 8 9 10 30 31 61 71
RRPAREN              : 39 40 69 70
SEMICOLONS           : 30 31 32 33 34 38 39 40 46
STRING               : 30 31 64
STRING_TYPE          : 43
TIMES                : 49
TRUE                 : 65
VARIABLE             : 7 8 9 10 12 13 38 39 40 46 67 69 71
VOID_TYPE            : 45
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

arg                  : 8 9 13
arg_f                : 74 75
argf                 : 76
argument_f           : 71
array_ass            : 26
array_decl           : 25
block                : 9 10 35 36 36 37
block_content        : 14 16
declaration          : 1 3
def_declr            : 1 2 5
definition           : 2 4
empty                : 15 31
expression           : 28 29 33 34 35 36 37 38 40 40 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 68 69 70 73 74
if                   : 20
if_else              : 21
print                : 27
print_helper         : 29 30
program              : 0
return               : 18
stat_expression      : 19
statement            : 16 17
type                 : 7 8 9 10 12 13 38 39
var_ass              : 24
var_decl             : 23
varg                 : 7 10
while                : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (5) program -> . def_declr
    (1) def_declr -> . declaration def_declr
    (2) def_declr -> . definition def_declr
    (3) def_declr -> . declaration
    (4) def_declr -> . definition
    (7) declaration -> . DECL VARIABLE LPAREN varg RPAREN COLON type
    (8) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (9) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block
    (10) definition -> . DEF VARIABLE LPAREN varg RPAREN COLON type block

    DECL            shift and go to state 5
    DEF             shift and go to state 6

    program                        shift and go to state 1
    def_declr                      shift and go to state 2
    declaration                    shift and go to state 3
    definition                     shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (5) program -> def_declr .

    $end            reduce using rule 5 (program -> def_declr .)


state 3

    (1) def_declr -> declaration . def_declr
    (3) def_declr -> declaration .
    (1) def_declr -> . declaration def_declr
    (2) def_declr -> . definition def_declr
    (3) def_declr -> . declaration
    (4) def_declr -> . definition
    (7) declaration -> . DECL VARIABLE LPAREN varg RPAREN COLON type
    (8) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (9) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block
    (10) definition -> . DEF VARIABLE LPAREN varg RPAREN COLON type block

    $end            reduce using rule 3 (def_declr -> declaration .)
    DECL            shift and go to state 5
    DEF             shift and go to state 6

    declaration                    shift and go to state 3
    def_declr                      shift and go to state 7
    definition                     shift and go to state 4

state 4

    (2) def_declr -> definition . def_declr
    (4) def_declr -> definition .
    (1) def_declr -> . declaration def_declr
    (2) def_declr -> . definition def_declr
    (3) def_declr -> . declaration
    (4) def_declr -> . definition
    (7) declaration -> . DECL VARIABLE LPAREN varg RPAREN COLON type
    (8) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (9) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block
    (10) definition -> . DEF VARIABLE LPAREN varg RPAREN COLON type block

    $end            reduce using rule 4 (def_declr -> definition .)
    DECL            shift and go to state 5
    DEF             shift and go to state 6

    definition                     shift and go to state 4
    def_declr                      shift and go to state 8
    declaration                    shift and go to state 3

state 5

    (7) declaration -> DECL . VARIABLE LPAREN varg RPAREN COLON type
    (8) declaration -> DECL . VARIABLE LPAREN arg RPAREN COLON type

    VARIABLE        shift and go to state 9


state 6

    (9) definition -> DEF . VARIABLE LPAREN arg RPAREN COLON type block
    (10) definition -> DEF . VARIABLE LPAREN varg RPAREN COLON type block

    VARIABLE        shift and go to state 10


state 7

    (1) def_declr -> declaration def_declr .

    $end            reduce using rule 1 (def_declr -> declaration def_declr .)


state 8

    (2) def_declr -> definition def_declr .

    $end            reduce using rule 2 (def_declr -> definition def_declr .)


state 9

    (7) declaration -> DECL VARIABLE . LPAREN varg RPAREN COLON type
    (8) declaration -> DECL VARIABLE . LPAREN arg RPAREN COLON type

    LPAREN          shift and go to state 11


state 10

    (9) definition -> DEF VARIABLE . LPAREN arg RPAREN COLON type block
    (10) definition -> DEF VARIABLE . LPAREN varg RPAREN COLON type block

    LPAREN          shift and go to state 12


state 11

    (7) declaration -> DECL VARIABLE LPAREN . varg RPAREN COLON type
    (8) declaration -> DECL VARIABLE LPAREN . arg RPAREN COLON type
    (11) varg -> .
    (12) arg -> . VARIABLE COLON type
    (13) arg -> . VARIABLE COLON type COMMA arg

    RPAREN          reduce using rule 11 (varg -> .)
    VARIABLE        shift and go to state 13

    varg                           shift and go to state 14
    arg                            shift and go to state 15

state 12

    (9) definition -> DEF VARIABLE LPAREN . arg RPAREN COLON type block
    (10) definition -> DEF VARIABLE LPAREN . varg RPAREN COLON type block
    (12) arg -> . VARIABLE COLON type
    (13) arg -> . VARIABLE COLON type COMMA arg
    (11) varg -> .

    VARIABLE        shift and go to state 13
    RPAREN          reduce using rule 11 (varg -> .)

    arg                            shift and go to state 16
    varg                           shift and go to state 17

state 13

    (12) arg -> VARIABLE . COLON type
    (13) arg -> VARIABLE . COLON type COMMA arg

    COLON           shift and go to state 18


state 14

    (7) declaration -> DECL VARIABLE LPAREN varg . RPAREN COLON type

    RPAREN          shift and go to state 19


state 15

    (8) declaration -> DECL VARIABLE LPAREN arg . RPAREN COLON type

    RPAREN          shift and go to state 20


state 16

    (9) definition -> DEF VARIABLE LPAREN arg . RPAREN COLON type block

    RPAREN          shift and go to state 21


state 17

    (10) definition -> DEF VARIABLE LPAREN varg . RPAREN COLON type block

    RPAREN          shift and go to state 22


state 18

    (12) arg -> VARIABLE COLON . type
    (13) arg -> VARIABLE COLON . type COMMA arg
    (41) type -> . INT_TYPE
    (42) type -> . FLOAT_TYPE
    (43) type -> . STRING_TYPE
    (44) type -> . BOOL_TYPE
    (45) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 23

state 19

    (7) declaration -> DECL VARIABLE LPAREN varg RPAREN . COLON type

    COLON           shift and go to state 29


state 20

    (8) declaration -> DECL VARIABLE LPAREN arg RPAREN . COLON type

    COLON           shift and go to state 30


state 21

    (9) definition -> DEF VARIABLE LPAREN arg RPAREN . COLON type block

    COLON           shift and go to state 31


state 22

    (10) definition -> DEF VARIABLE LPAREN varg RPAREN . COLON type block

    COLON           shift and go to state 32


state 23

    (12) arg -> VARIABLE COLON type .
    (13) arg -> VARIABLE COLON type . COMMA arg

    RPAREN          reduce using rule 12 (arg -> VARIABLE COLON type .)
    COMMA           shift and go to state 33


state 24

    (41) type -> INT_TYPE .

    COMMA           reduce using rule 41 (type -> INT_TYPE .)
    RPAREN          reduce using rule 41 (type -> INT_TYPE .)
    DECL            reduce using rule 41 (type -> INT_TYPE .)
    DEF             reduce using rule 41 (type -> INT_TYPE .)
    $end            reduce using rule 41 (type -> INT_TYPE .)
    LBRACKET        reduce using rule 41 (type -> INT_TYPE .)
    EQUALS          reduce using rule 41 (type -> INT_TYPE .)
    RRPAREN         reduce using rule 41 (type -> INT_TYPE .)


state 25

    (42) type -> FLOAT_TYPE .

    COMMA           reduce using rule 42 (type -> FLOAT_TYPE .)
    RPAREN          reduce using rule 42 (type -> FLOAT_TYPE .)
    DECL            reduce using rule 42 (type -> FLOAT_TYPE .)
    DEF             reduce using rule 42 (type -> FLOAT_TYPE .)
    $end            reduce using rule 42 (type -> FLOAT_TYPE .)
    LBRACKET        reduce using rule 42 (type -> FLOAT_TYPE .)
    EQUALS          reduce using rule 42 (type -> FLOAT_TYPE .)
    RRPAREN         reduce using rule 42 (type -> FLOAT_TYPE .)


state 26

    (43) type -> STRING_TYPE .

    COMMA           reduce using rule 43 (type -> STRING_TYPE .)
    RPAREN          reduce using rule 43 (type -> STRING_TYPE .)
    DECL            reduce using rule 43 (type -> STRING_TYPE .)
    DEF             reduce using rule 43 (type -> STRING_TYPE .)
    $end            reduce using rule 43 (type -> STRING_TYPE .)
    LBRACKET        reduce using rule 43 (type -> STRING_TYPE .)
    EQUALS          reduce using rule 43 (type -> STRING_TYPE .)
    RRPAREN         reduce using rule 43 (type -> STRING_TYPE .)


state 27

    (44) type -> BOOL_TYPE .

    COMMA           reduce using rule 44 (type -> BOOL_TYPE .)
    RPAREN          reduce using rule 44 (type -> BOOL_TYPE .)
    DECL            reduce using rule 44 (type -> BOOL_TYPE .)
    DEF             reduce using rule 44 (type -> BOOL_TYPE .)
    $end            reduce using rule 44 (type -> BOOL_TYPE .)
    LBRACKET        reduce using rule 44 (type -> BOOL_TYPE .)
    EQUALS          reduce using rule 44 (type -> BOOL_TYPE .)
    RRPAREN         reduce using rule 44 (type -> BOOL_TYPE .)


state 28

    (45) type -> VOID_TYPE .

    COMMA           reduce using rule 45 (type -> VOID_TYPE .)
    RPAREN          reduce using rule 45 (type -> VOID_TYPE .)
    DECL            reduce using rule 45 (type -> VOID_TYPE .)
    DEF             reduce using rule 45 (type -> VOID_TYPE .)
    $end            reduce using rule 45 (type -> VOID_TYPE .)
    LBRACKET        reduce using rule 45 (type -> VOID_TYPE .)
    EQUALS          reduce using rule 45 (type -> VOID_TYPE .)
    RRPAREN         reduce using rule 45 (type -> VOID_TYPE .)


state 29

    (7) declaration -> DECL VARIABLE LPAREN varg RPAREN COLON . type
    (41) type -> . INT_TYPE
    (42) type -> . FLOAT_TYPE
    (43) type -> . STRING_TYPE
    (44) type -> . BOOL_TYPE
    (45) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 34

state 30

    (8) declaration -> DECL VARIABLE LPAREN arg RPAREN COLON . type
    (41) type -> . INT_TYPE
    (42) type -> . FLOAT_TYPE
    (43) type -> . STRING_TYPE
    (44) type -> . BOOL_TYPE
    (45) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 35

state 31

    (9) definition -> DEF VARIABLE LPAREN arg RPAREN COLON . type block
    (41) type -> . INT_TYPE
    (42) type -> . FLOAT_TYPE
    (43) type -> . STRING_TYPE
    (44) type -> . BOOL_TYPE
    (45) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 36

state 32

    (10) definition -> DEF VARIABLE LPAREN varg RPAREN COLON . type block
    (41) type -> . INT_TYPE
    (42) type -> . FLOAT_TYPE
    (43) type -> . STRING_TYPE
    (44) type -> . BOOL_TYPE
    (45) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 37

state 33

    (13) arg -> VARIABLE COLON type COMMA . arg
    (12) arg -> . VARIABLE COLON type
    (13) arg -> . VARIABLE COLON type COMMA arg

    VARIABLE        shift and go to state 13

    arg                            shift and go to state 38

state 34

    (7) declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type .

    DECL            reduce using rule 7 (declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type .)
    DEF             reduce using rule 7 (declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type .)
    $end            reduce using rule 7 (declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type .)


state 35

    (8) declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .

    DECL            reduce using rule 8 (declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .)
    DEF             reduce using rule 8 (declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .)
    $end            reduce using rule 8 (declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .)


state 36

    (9) definition -> DEF VARIABLE LPAREN arg RPAREN COLON type . block
    (14) block -> . LBRACKET block_content RBRACKET
    (15) block -> . LBRACKET empty RBRACKET

    LBRACKET        shift and go to state 40

    block                          shift and go to state 39

state 37

    (10) definition -> DEF VARIABLE LPAREN varg RPAREN COLON type . block
    (14) block -> . LBRACKET block_content RBRACKET
    (15) block -> . LBRACKET empty RBRACKET

    LBRACKET        shift and go to state 40

    block                          shift and go to state 41

state 38

    (13) arg -> VARIABLE COLON type COMMA arg .

    RPAREN          reduce using rule 13 (arg -> VARIABLE COLON type COMMA arg .)


state 39

    (9) definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block .

    DECL            reduce using rule 9 (definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block .)
    DEF             reduce using rule 9 (definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block .)
    $end            reduce using rule 9 (definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block .)


state 40

    (14) block -> LBRACKET . block_content RBRACKET
    (15) block -> LBRACKET . empty RBRACKET
    (16) block_content -> . statement block_content
    (17) block_content -> . statement
    (6) empty -> .
    (18) statement -> . return
    (19) statement -> . stat_expression
    (20) statement -> . if
    (21) statement -> . if_else
    (22) statement -> . while
    (23) statement -> . var_decl
    (24) statement -> . var_ass
    (25) statement -> . array_decl
    (26) statement -> . array_ass
    (27) statement -> . print
    (32) return -> . RETURN SEMICOLONS
    (33) return -> . RETURN expression SEMICOLONS
    (34) stat_expression -> . expression SEMICOLONS
    (35) if -> . IF expression block
    (36) if_else -> . IF expression block ELSE block
    (37) while -> . WHILE expression block
    (38) var_decl -> . VARIABLE COLON type EQUALS expression SEMICOLONS
    (46) var_ass -> . VARIABLE EQUALS expression SEMICOLONS
    (39) array_decl -> . VARIABLE COLON LRPAREN type RRPAREN SEMICOLONS
    (40) array_ass -> . VARIABLE LRPAREN expression RRPAREN EQUALS expression SEMICOLONS
    (30) print -> . PRINT LPAREN STRING print_helper RPAREN SEMICOLONS
    (31) print -> . PRINT LPAREN STRING empty RPAREN SEMICOLONS
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression TIMES expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . expression COMP expression
    (52) expression -> . expression AND expression
    (53) expression -> . expression OR expression
    (54) expression -> . expression NOT_EQUALS expression
    (55) expression -> . expression GREATER_OR_EQUAL expression
    (56) expression -> . expression LESS_OR_EQUALS expression
    (57) expression -> . expression GREATER expression
    (58) expression -> . expression LESS expression
    (59) expression -> . expression MODULO expression
    (60) expression -> . MINUS expression
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . INT
    (63) expression -> . FLOAT
    (64) expression -> . STRING
    (65) expression -> . TRUE
    (66) expression -> . FALSE
    (67) expression -> . VARIABLE
    (68) expression -> . NOT expression
    (69) expression -> . VARIABLE LRPAREN expression RRPAREN
    (70) expression -> . GET_ARRAY LRPAREN expression RRPAREN
    (71) expression -> . VARIABLE LPAREN argument_f RPAREN

    RBRACKET        reduce using rule 6 (empty -> .)
    RETURN          shift and go to state 55
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    VARIABLE        shift and go to state 59
    PRINT           shift and go to state 60
    MINUS           shift and go to state 63
    LPAREN          shift and go to state 61
    INT             shift and go to state 64
    FLOAT           shift and go to state 65
    STRING          shift and go to state 62
    TRUE            shift and go to state 66
    FALSE           shift and go to state 67
    NOT             shift and go to state 68
    GET_ARRAY       shift and go to state 69

    block_content                  shift and go to state 42
    empty                          shift and go to state 43
    statement                      shift and go to state 44
    return                         shift and go to state 45
    stat_expression                shift and go to state 46
    if                             shift and go to state 47
    if_else                        shift and go to state 48
    while                          shift and go to state 49
    var_decl                       shift and go to state 50
    var_ass                        shift and go to state 51
    array_decl                     shift and go to state 52
    array_ass                      shift and go to state 53
    print                          shift and go to state 54
    expression                     shift and go to state 56

state 41

    (10) definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block .

    DECL            reduce using rule 10 (definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block .)
    DEF             reduce using rule 10 (definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block .)
    $end            reduce using rule 10 (definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block .)


state 42

    (14) block -> LBRACKET block_content . RBRACKET

    RBRACKET        shift and go to state 70


state 43

    (15) block -> LBRACKET empty . RBRACKET

    RBRACKET        shift and go to state 71


state 44

    (16) block_content -> statement . block_content
    (17) block_content -> statement .
    (16) block_content -> . statement block_content
    (17) block_content -> . statement
    (18) statement -> . return
    (19) statement -> . stat_expression
    (20) statement -> . if
    (21) statement -> . if_else
    (22) statement -> . while
    (23) statement -> . var_decl
    (24) statement -> . var_ass
    (25) statement -> . array_decl
    (26) statement -> . array_ass
    (27) statement -> . print
    (32) return -> . RETURN SEMICOLONS
    (33) return -> . RETURN expression SEMICOLONS
    (34) stat_expression -> . expression SEMICOLONS
    (35) if -> . IF expression block
    (36) if_else -> . IF expression block ELSE block
    (37) while -> . WHILE expression block
    (38) var_decl -> . VARIABLE COLON type EQUALS expression SEMICOLONS
    (46) var_ass -> . VARIABLE EQUALS expression SEMICOLONS
    (39) array_decl -> . VARIABLE COLON LRPAREN type RRPAREN SEMICOLONS
    (40) array_ass -> . VARIABLE LRPAREN expression RRPAREN EQUALS expression SEMICOLONS
    (30) print -> . PRINT LPAREN STRING print_helper RPAREN SEMICOLONS
    (31) print -> . PRINT LPAREN STRING empty RPAREN SEMICOLONS
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression TIMES expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . expression COMP expression
    (52) expression -> . expression AND expression
    (53) expression -> . expression OR expression
    (54) expression -> . expression NOT_EQUALS expression
    (55) expression -> . expression GREATER_OR_EQUAL expression
    (56) expression -> . expression LESS_OR_EQUALS expression
    (57) expression -> . expression GREATER expression
    (58) expression -> . expression LESS expression
    (59) expression -> . expression MODULO expression
    (60) expression -> . MINUS expression
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . INT
    (63) expression -> . FLOAT
    (64) expression -> . STRING
    (65) expression -> . TRUE
    (66) expression -> . FALSE
    (67) expression -> . VARIABLE
    (68) expression -> . NOT expression
    (69) expression -> . VARIABLE LRPAREN expression RRPAREN
    (70) expression -> . GET_ARRAY LRPAREN expression RRPAREN
    (71) expression -> . VARIABLE LPAREN argument_f RPAREN

    RBRACKET        reduce using rule 17 (block_content -> statement .)
    RETURN          shift and go to state 55
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    VARIABLE        shift and go to state 59
    PRINT           shift and go to state 60
    MINUS           shift and go to state 63
    LPAREN          shift and go to state 61
    INT             shift and go to state 64
    FLOAT           shift and go to state 65
    STRING          shift and go to state 62
    TRUE            shift and go to state 66
    FALSE           shift and go to state 67
    NOT             shift and go to state 68
    GET_ARRAY       shift and go to state 69

    statement                      shift and go to state 44
    block_content                  shift and go to state 72
    return                         shift and go to state 45
    stat_expression                shift and go to state 46
    if                             shift and go to state 47
    if_else                        shift and go to state 48
    while                          shift and go to state 49
    var_decl                       shift and go to state 50
    var_ass                        shift and go to state 51
    array_decl                     shift and go to state 52
    array_ass                      shift and go to state 53
    print                          shift and go to state 54
    expression                     shift and go to state 56

state 45

    (18) statement -> return .

    RETURN          reduce using rule 18 (statement -> return .)
    IF              reduce using rule 18 (statement -> return .)
    WHILE           reduce using rule 18 (statement -> return .)
    VARIABLE        reduce using rule 18 (statement -> return .)
    PRINT           reduce using rule 18 (statement -> return .)
    MINUS           reduce using rule 18 (statement -> return .)
    LPAREN          reduce using rule 18 (statement -> return .)
    INT             reduce using rule 18 (statement -> return .)
    FLOAT           reduce using rule 18 (statement -> return .)
    STRING          reduce using rule 18 (statement -> return .)
    TRUE            reduce using rule 18 (statement -> return .)
    FALSE           reduce using rule 18 (statement -> return .)
    NOT             reduce using rule 18 (statement -> return .)
    GET_ARRAY       reduce using rule 18 (statement -> return .)
    RBRACKET        reduce using rule 18 (statement -> return .)


state 46

    (19) statement -> stat_expression .

    RETURN          reduce using rule 19 (statement -> stat_expression .)
    IF              reduce using rule 19 (statement -> stat_expression .)
    WHILE           reduce using rule 19 (statement -> stat_expression .)
    VARIABLE        reduce using rule 19 (statement -> stat_expression .)
    PRINT           reduce using rule 19 (statement -> stat_expression .)
    MINUS           reduce using rule 19 (statement -> stat_expression .)
    LPAREN          reduce using rule 19 (statement -> stat_expression .)
    INT             reduce using rule 19 (statement -> stat_expression .)
    FLOAT           reduce using rule 19 (statement -> stat_expression .)
    STRING          reduce using rule 19 (statement -> stat_expression .)
    TRUE            reduce using rule 19 (statement -> stat_expression .)
    FALSE           reduce using rule 19 (statement -> stat_expression .)
    NOT             reduce using rule 19 (statement -> stat_expression .)
    GET_ARRAY       reduce using rule 19 (statement -> stat_expression .)
    RBRACKET        reduce using rule 19 (statement -> stat_expression .)


state 47

    (20) statement -> if .

    RETURN          reduce using rule 20 (statement -> if .)
    IF              reduce using rule 20 (statement -> if .)
    WHILE           reduce using rule 20 (statement -> if .)
    VARIABLE        reduce using rule 20 (statement -> if .)
    PRINT           reduce using rule 20 (statement -> if .)
    MINUS           reduce using rule 20 (statement -> if .)
    LPAREN          reduce using rule 20 (statement -> if .)
    INT             reduce using rule 20 (statement -> if .)
    FLOAT           reduce using rule 20 (statement -> if .)
    STRING          reduce using rule 20 (statement -> if .)
    TRUE            reduce using rule 20 (statement -> if .)
    FALSE           reduce using rule 20 (statement -> if .)
    NOT             reduce using rule 20 (statement -> if .)
    GET_ARRAY       reduce using rule 20 (statement -> if .)
    RBRACKET        reduce using rule 20 (statement -> if .)


state 48

    (21) statement -> if_else .

    RETURN          reduce using rule 21 (statement -> if_else .)
    IF              reduce using rule 21 (statement -> if_else .)
    WHILE           reduce using rule 21 (statement -> if_else .)
    VARIABLE        reduce using rule 21 (statement -> if_else .)
    PRINT           reduce using rule 21 (statement -> if_else .)
    MINUS           reduce using rule 21 (statement -> if_else .)
    LPAREN          reduce using rule 21 (statement -> if_else .)
    INT             reduce using rule 21 (statement -> if_else .)
    FLOAT           reduce using rule 21 (statement -> if_else .)
    STRING          reduce using rule 21 (statement -> if_else .)
    TRUE            reduce using rule 21 (statement -> if_else .)
    FALSE           reduce using rule 21 (statement -> if_else .)
    NOT             reduce using rule 21 (statement -> if_else .)
    GET_ARRAY       reduce using rule 21 (statement -> if_else .)
    RBRACKET        reduce using rule 21 (statement -> if_else .)


state 49

    (22) statement -> while .

    RETURN          reduce using rule 22 (statement -> while .)
    IF              reduce using rule 22 (statement -> while .)
    WHILE           reduce using rule 22 (statement -> while .)
    VARIABLE        reduce using rule 22 (statement -> while .)
    PRINT           reduce using rule 22 (statement -> while .)
    MINUS           reduce using rule 22 (statement -> while .)
    LPAREN          reduce using rule 22 (statement -> while .)
    INT             reduce using rule 22 (statement -> while .)
    FLOAT           reduce using rule 22 (statement -> while .)
    STRING          reduce using rule 22 (statement -> while .)
    TRUE            reduce using rule 22 (statement -> while .)
    FALSE           reduce using rule 22 (statement -> while .)
    NOT             reduce using rule 22 (statement -> while .)
    GET_ARRAY       reduce using rule 22 (statement -> while .)
    RBRACKET        reduce using rule 22 (statement -> while .)


state 50

    (23) statement -> var_decl .

    RETURN          reduce using rule 23 (statement -> var_decl .)
    IF              reduce using rule 23 (statement -> var_decl .)
    WHILE           reduce using rule 23 (statement -> var_decl .)
    VARIABLE        reduce using rule 23 (statement -> var_decl .)
    PRINT           reduce using rule 23 (statement -> var_decl .)
    MINUS           reduce using rule 23 (statement -> var_decl .)
    LPAREN          reduce using rule 23 (statement -> var_decl .)
    INT             reduce using rule 23 (statement -> var_decl .)
    FLOAT           reduce using rule 23 (statement -> var_decl .)
    STRING          reduce using rule 23 (statement -> var_decl .)
    TRUE            reduce using rule 23 (statement -> var_decl .)
    FALSE           reduce using rule 23 (statement -> var_decl .)
    NOT             reduce using rule 23 (statement -> var_decl .)
    GET_ARRAY       reduce using rule 23 (statement -> var_decl .)
    RBRACKET        reduce using rule 23 (statement -> var_decl .)


state 51

    (24) statement -> var_ass .

    RETURN          reduce using rule 24 (statement -> var_ass .)
    IF              reduce using rule 24 (statement -> var_ass .)
    WHILE           reduce using rule 24 (statement -> var_ass .)
    VARIABLE        reduce using rule 24 (statement -> var_ass .)
    PRINT           reduce using rule 24 (statement -> var_ass .)
    MINUS           reduce using rule 24 (statement -> var_ass .)
    LPAREN          reduce using rule 24 (statement -> var_ass .)
    INT             reduce using rule 24 (statement -> var_ass .)
    FLOAT           reduce using rule 24 (statement -> var_ass .)
    STRING          reduce using rule 24 (statement -> var_ass .)
    TRUE            reduce using rule 24 (statement -> var_ass .)
    FALSE           reduce using rule 24 (statement -> var_ass .)
    NOT             reduce using rule 24 (statement -> var_ass .)
    GET_ARRAY       reduce using rule 24 (statement -> var_ass .)
    RBRACKET        reduce using rule 24 (statement -> var_ass .)


state 52

    (25) statement -> array_decl .

    RETURN          reduce using rule 25 (statement -> array_decl .)
    IF              reduce using rule 25 (statement -> array_decl .)
    WHILE           reduce using rule 25 (statement -> array_decl .)
    VARIABLE        reduce using rule 25 (statement -> array_decl .)
    PRINT           reduce using rule 25 (statement -> array_decl .)
    MINUS           reduce using rule 25 (statement -> array_decl .)
